# fly-in

./: README.md  en.subject.txt  main.py  pyproject.toml
display/: __init__.py  tui.py
display/mlx/python/: pyproject.toml
domain/: __init__.py  cell.py  drones.py  graph.py  grid.py  models.py  vector.py
parser/: .file_parser.py.swp  __init__.py  file_parser.py  models.py
simulation/: __init__.py  sim.py
